--- a/HW9/IPSdisplay.X/nbproject/Makefile-genesis.properties
+++ b/HW9/IPSdisplay.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Tue Jun 08 15:18:43 CDT 2021
+#Tue Jun 08 17:54:35 CDT 2021
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Users\\76700\\.mchp_packs\\Microchip\\PIC32MX_DFP\\1.5.259
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v2.50\\bin
 host.id=h77b-a2ub-i
-configurations-xml=d443619508658d073bbd4b816de3b062
+configurations-xml=bbea9609379295a43eac99e4d96fb77e
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=10848bd240cfb6abc7d759fdffba8dbe
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=E\:\\Github\\ME433\\HW9\\IPS_TFTdisplay.X
+proj.dir=E\:\\Github\\ME433\\HW9\\IPSdisplay.X
 host.platform=windows
